# gholax

./: README.md  pyproject.toml  setup_env.sh  setup_nersc_env.sh
example_configs/: generate_training_data.yaml  template_config.yaml  train_p_cleft_emu.yaml
examples/: chain_demo.ipynb  fisher_demo.ipynb  model_demo.ipynb
gholax/: cli.py
gholax/data_vector/: data_vector.py  redshift_space_multipoles.py  two_point_spectrum.py
gholax/likelihood/: __init__.py  cosmic_shear_2loop.py  flow_likelihood.py  gaussian_likelihood.py  likelihood.py  nx2pt_aps.py  rsd_pk.py
gholax/sampler/: __init__.py  emcee.py  fisher.py  mclmc.py  metropolis_hastings.py  minimize.py  nuts.py  priors.py
gholax/theory/: __init__.py  boltzmann.py  emulator.py  expansion_history.py  ia.py  linear_growth.py  linear_growth_rate.py  linear_power_spectrum.py  real_space_2loop_matter_power_spectrum.py  real_space_biased_tracer_spectra.py  redshift_space_biased_tracer_spectra.py  spectral_equivalence.py  spline.py
gholax/training/: design.py  generate_training_data.py  generate_training_data.yaml  reformat.py  reformat_training_data_fz.py  reformat_training_data_p_cleft.py  reformat_training_data_p_density_shape.py  reformat_training_data_p_shape_shape.py  reformat_training_data_sigma8z.py  (+3 more)
tests/: conftest.py  test_3x2pt_log_posterior.py  test_bias_convention_consistency.py  test_expansion_history.py  test_lensing_counterterm.py  test_linear_growth.py  test_profile_theory_modules.py  test_rsd_emulator_integration.py  test_spectral_equivalence_spectra.py  test_timings.py  test_w0wa_growth.py
(+68 files in other folders)
