[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2",
    "pip>=21.2",
]

[project]
name = "gholax"
authors = [{name = "Joe DeRose"}]
description = "Differentiable likelihood through surrogate models (gholas)."
version = "0.1.0"
dependencies = ["jax", "blackjax", "optax", "interpax", "scipy", "numpy", "pyyaml", "h5py"]
readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://https://github.com/j-dr/gholax"}
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools]
packages = ["gholax"]

#[tool.setuptools.package-data]
#gholax = ["*", "theory/emu_weights/**/*",
#]